# ibm

./: docker-compose.yml
bob-homepage/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
bob-homepage/public/assets/: AnalyticsLink-D9820-DU.js  AudienceOnly-CFrsq1XC.js  BobStanding-DvcEikji.js  DeploymentEnvOnly-arkMVEmk.js  ErrorPage-BhVTvTUX.js  Header-Bcsx0ukX.js  HeroBackground-TmXG33Np.js  Icon-DOOkepvL.js  NotFoundPage-CVnSFSKg.js  PageMeta-DDSEtVFk.js  Show-DmZ0OfWK.js  accordion-D8-0FHRC.js  avatar-CdRegTsR.js  bucket-0-CXu5Gdxk.js  bucket-10-BZB9uuQ7.js  bucket-11-CJxxjFFH.js  bucket-12-4UgTP1Ku.js  bucket-17-CkBk1R7-.js  bucket-18-CA_XTh0A.js  bucket-19-7xzPUpDv.js  bucket-3-iiURSxHo.js  bucket-4-C2uxrLAL.js  bucket-6-CCQP8a1W.js  bucket-8-ta9hEjcb.js  bundle-mjs-BftRMOcv.js  button-DBNdVewX.js  button-DN468cwS.js  button-DhsYDq0R.js  codeblock-B2nglGkn.js  (+42 more)
bob-homepage/src/: App.css  App.tsx  gifler.d.ts  index.css
web-qua-tet-voicechat/: .env.example  .gitignore  bot.py  bot_fast_api.py  n8n_processor_llm.py  omi_tts_service.py  qwen_api_client.py  rtc_index.html  screnario.txt  server.py  server_rtc.py  testcase.md  testvi_chunk.py  whisperx_api_client.py
web-qua-tet-voicechat/WhisperX-Docker-API/: Makefile  api_documentation.md  app.py  app2.py  config.py  docker-compose-test.yml  docker-compose.bak.yml  docker-compose.yml  dockerfile  readme.md  requirements.txt  run.txt
web-qua-tet-voicechat/auto-summary/: bot_fast_api.py  pyproject.toml  run.txt  server.py  whisperx_api_client.py
web-qua-tet-voicechat/ui/: index.html
(+4 files in other folders)
